--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="StockController as vm">
 
-    <h4 class="text-center">Stock On Hand of {{child.vaccine }} for {{child.themonth }}</h4>
+    <h4 class="text-center">Stock Balances of {{child.vaccine }} at the end of {{child.themonth | date:'MMM yyyy' }}</h4>
     <br>
     <br>
 
@@ -27,7 +27,7 @@
             <col align="right">
             <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}"  >{{row.district_name}}</td>
-                <td title="'At Hand'" sortable="'at_hand'" class="text-center" >{{row.at_hand | number:0}}</td>
+                <td title="'Balances'" sortable="'at_hand'" class="text-center" >{{row.at_hand | number:0}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center" >{{row.stock_requirement__minimum}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center" >{{row.stock_requirement__maximum}}</td>
             </tr>
