Added  Available Stock on UptakeRate Sorting Issues

--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -46,7 +46,7 @@
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.distribution" ui-sref-opts="{reload: true}">
                     <span class="quality_test__metric"> {{ child.refreshrate | number:0 }}%</span>
-                    <span class="quality_test__description">{{"Refresh Rate" | uppercase}}</span>
+                    <span class="quality_test__description">{{"Refill Rate" | uppercase}}</span>
                 </a>
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
