--- a/dashboard/static/app/components/stock/distribution.html
+++ b/dashboard/static/app/components/stock/distribution.html
@@ -16,6 +16,7 @@
             <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}"  >{{row.district_name}}</td>
                 <td title="'Issues'" sortable="'received'" class="text-center" >{{row.received | number:0}}</td>
+                <td title="'orders'" sortable="'ordered'" class="text-center" >{{row.ordered | number:0}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center">{{row.stock_requirement__maximum}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center">{{row.stock_requirement__minimum}}</td>
             </tr>
