--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -7,26 +7,26 @@
         </div>
 
         <div class="col-md-12 main-filters">
-            <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
-                ng-options="month as month.name group by month.year for month in shell.months">
+            <select name="name" class="form-control filter criteria-select" ng-model="shell.startQuarter"
+                ng-options="quarter as quarter for quarter in shell.fridgeQuarters">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
-                    ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
+            <select name="quarter" class="form-control filter criteria-select" ng-model="shell.endQuarter"
+                    ng-options="quarter as quarter for quarter in shell.fridgeQuarters">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
-                    ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
+            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedFridgeDistrict"
+                    ng-options="district as district.district for district in shell.fridgeDistricts">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
-                    ng-options="district as district.name for district in shell.districts">
+            <select name="CARE LEVEL" class="form-control filter criteria-select" ng-model="shell.selectedFridgeCareLevel"
+                    ng-options="carelevel as carelevel.group for carelevel in shell.fridgeCareLevels">
             </select>
         </div>
     </div>
@@ -39,25 +39,20 @@
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.facilities">
                     <span class="quality_test__metric"> 0 </span>
-                    <span class="quality_test__description">{{"Immunizing Facilities" | uppercase}}</span>
+                    <span class="quality_test__description">{{"IMMUNIZING FACILITIES" }}</span>
                 </a>
             </div>
-            <div class="quality_test" ui-sref-active="quality_test_active">
-                <a ui-sref="fridge.coverage">
-                    <span class="quality_test__metric"> 0</span>
-                    <span class="quality_test__description">{{"Fridge Coverage" | uppercase}}</span>
-                </a>
-            </div>
+
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.workingstatus">
                     <span class="quality_test__metric"> 0</span>
-                    <span class="quality_test__description">{{"Working Status" | uppercase}}</span>
+                    <span class="quality_test__description">{{"FUNCTIONALITY" }}</span>
                 </a>
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.capacity">
                     <span class="quality_test__metric"> 0</span>
-                    <span class="quality_test__description">{{"Available Capacity" | uppercase}}</span>
+                    <span class="quality_test__description">{{"AVAILABLE CAPACITY"}}</span>
                 </a>
             </div>
         </div>
