tables showing for capacity

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -83,6 +83,7 @@
 <script type="text/javascript" src='{% static "app/routes.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/filterService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/stockService.js" %}'></script>
+<script type="text/javascript" src='{% static "app/shared/fridgeService.js" %}'></script>
 <script type="text/javascript" src='{% static "app/shared/mainController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/coverage/coverageController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
