--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -38,14 +38,14 @@
          <h3>KEY METRICS</h3>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.facilities">
-                    <span class="quality_test__metric"> 0 </span>
+                    <span class="quality_test__metric"> 0 {{ child.child.myname }} </span>
                     <span class="quality_test__description">{{"IMMUNIZING FACILITIES" }}</span>
                 </a>
             </div>
 
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.workingstatus">
-                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__metric"> 0 {{ child.endQuarter }}</span>
                     <span class="quality_test__description">{{"FUNCTIONALITY" }}</span>
                 </a>
             </div>
