--- a/dashboard/static/app/components/fridge/workingstatus.html
+++ b/dashboard/static/app/components/fridge/workingstatus.html
@@ -1,28 +1,48 @@
-<div ng-controller="FridgeController">
-    <h4 class="text-center">WORKING STATUS</h4>
-    <div class="col-md-8">
+<div ng-controller="FridgeController as vm">
+
+    <h4 class="text-left" >Functionality</h4>
+    <br>
+    <br>
+
+    <div class="col-md-7">
         <div class="page_graph">
-            <nvd3 options="options" data="data.slice(1,4)"></nvd3>
+            <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-5">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#district">District</a></li>
+          <li><a data-toggle="tab" href="#facility">Facility</a></li>
+        </ul>
+        <br>
+        <div class="tab-content">
+            <div id="district" class="tab-pane fade in active">
+                <table ng-table="vm.tableParams_d" class="row-border hover table table-condensed table-striped" show-filter="true">
+                    <tr ng-repeat="row in $data">
+                        <td title="'District'" sortable="'facility__district'" filter="{facility__district: 'text'}"  >{{row.facility__district}}</td>
+                        <td title="'No.existing'" sortable="'number_existing'"  class="text-center">{{row.number_existing}}</td>
+                        <td title="'Working'" sortable="'working_well'" class="text-center">{{row.working_well}}</td>
+                        <td title="'Not_working'" sortable="'not_working'" class="text-center">{{row.not_working}}</td>
+                        <td title="'Needs maintenance'" sortable="'needs_maintenance'" class="text-center">{{row.needs_maintenance}}</td>
+                    </tr>
+                </table>
+            </div>
 
-           <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                </div>
-           </div>
+            <div id="facility" class="tab-pane fade">
+                <table ng-table="vm.tableParams_f" class="row-border hover table table-condensed table-striped" show-filter="true">
+                    <tr ng-repeat="row in $data">
+                        <td title="'Facility'" sortable="'facility__name'" filter="{facility__name: 'text'}"  >{{row.facility__name}}</td>
+                        <td title="'No.existing'" sortable="'number_existing'"  class="text-center">{{row.number_existing}}</td>
+                        <td title="'Working'" sortable="'working_well'" class="text-center">{{row.working_well }}</td>
+                        <td title="'Not_working'" sortable="'not_working'" class="text-center">{{row.not_working}}</td>
+                        <td title="'Needs maintenance'" sortable="'needs_maintenance'" class="text-center">{{row.needs_maintenance}}</td>
+                    </tr>
+                </table>
+            </div>
 
-        <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{district.key}}</td>
-                <td title="'Units'" sortable="'value'">{{getTotal(district.key)}}</td>
-            </tr>
-        </table>
+        </div>
+
     </div>
+
+
 </div>
