--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -1,28 +1,24 @@
-<div ng-controller="FridgeController">
-    <h4 class="text-center">IMMUNIZING FACILITIES</h4>
-    <div class="col-md-8">
+<div ng-controller="FridgeController as vm">
+
+    <h4 class="text-left" >Functionality</h4>
+    <br>
+    <br>
+
+    <div class="col-md-5">
         <div class="page_graph">
-            <nvd3 options="options" data="data.slice(1,4)"></nvd3>
+            <nvd3 options="vm.options" data="vm.graph"></nvd3>
         </div>
     </div>
-    <div class="col-md-4">
-
-           <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                </div>
-           </div>
-
-        <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{district.key}}</td>
-                <td title="'Units'" sortable="'value'">{{getTotal(district.key)}}</td>
+    <div class="col-md-7">
+        <table ng-table="vm.tableParams_d" class="row-border hover table table-condensed table-striped" show-filter="true">
+            <tr ng-repeat="row in $data">
+                <td title="'District'" sortable="'facility__district'" filter="{facility__district: 'text'}"  >{{row.facility__district}}</td>
+                <td title="'ImmunizingF'" sortable="'immunizing'"  class="text-center">{{row.immunizing}}</td>
+                <td title="'Facilities'" sortable="'Total_facilities'" class="text-center">{{row.Total_facilities}}</td>
             </tr>
         </table>
+
     </div>
+
+
 </div>
