--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -17,7 +17,7 @@
         <br>
         <div class="tab-content">
             <div id="district" class="tab-pane fade in active">
-                <table ng-table="vm.tableParams_d" class="row-border hover table table-condensed table-striped" show-filter="true">
+                <table ng-table="vm.tableParamsCapacityAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
                     <tr ng-repeat="row in $data">
                         <td title="'District'" sortable="'facility__district'" filter="{facility__district: 'text'}"  >{{row.facility__district}}</td>
                         <td title="'Required'" sortable="'required'"  class="text-center">{{row.required | number : 2 }}</td>
