--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -20,7 +20,7 @@
             <h5 class="text-center"> - </h5>
         </div>
             <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedFridgeDistrict"
-                    ng-options="district as district.district for district in shell.fridgeDistricts">
+                    ng-options="fridgeDistrict as district.district for district in shell.fridgeDistricts">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
