--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -19,8 +19,8 @@
         <div class="spacer">
             <h5 class="text-center"> - </h5>
         </div>
-            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedFridgeDistrict"
-                    ng-options="fridgeDistrict as district.district for district in shell.fridgeDistricts">
+            <select name="fridgeDistrict" class="form-control filter criteria-select" ng-model="shell.selectedFridgeDistrict"
+                    ng-options="fridgeDistrict as fridgeDistrict.district for fridgeDistrict in shell.fridgeDistricts">
             </select>
         <div class="spacer">
             <h5 class="text-center"> - </h5>
