--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -1,12 +1,12 @@
 <div ng-controller="FridgeController as vm">
 
-    <h4 class="text-left" >Functionality</h4>
+    <h4 class="text-left" >Immunizing Facilities</h4>
     <br>
     <br>
 
     <div class="col-md-6">
         <div class="page_graph">
-            <nvd3 options="vm.options" data="vm.graph"></nvd3>
+            <nvd3 options="vm.optionsimmunizing" data="vm.graphimmunizing"></nvd3>
         </div>
     </div>
     <div class="col-md-6">
