more on Coldchain
api
capacity
fridge
fridgecontroller

--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -51,7 +51,7 @@
             </div>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.capacity"  ui-sref-opts="{reload: true}">
-                    <span class="quality_test__metric"> 0</span>
+                    <span class="quality_test__metric">{{ child.required | number:0 }}</span>
                     <span class="quality_test__description">{{"AVAILABLE CAPACITY"}}</span>
                 </a>
             </div>
