--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -14,7 +14,7 @@
             <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'facility__district'" filter="{facility__district: 'text'}"  >{{row.facility__district}}</td>
                 <td title="'ImmunizingF'" sortable="'immunizing'"  class="text-center">{{row.immunizing}}</td>
-                <td title="'cc'" >{{ (row.immunizing/row.Total_facilities)*100 | number:0}}%</td>
+                <td title="'CCE Coverage'" sortable="'immunizing_with_fridge / immunizing'" class="text-center" >{{ (row.immunizing_with_fridge/row.immunizing)*100 | number:0}}%</td>
             </tr>
         </table>
 
