--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -38,8 +38,8 @@
          <h3>KEY METRICS</h3>
             <div class="quality_test" ui-sref-active="quality_test_active">
                 <a ui-sref="fridge.facilities" ui-sref-opts="{reload: true}">
-                    <span class="quality_test__metric"> 0 {{ child.child.myname }} </span>
-                    <span class="quality_test__description">{{"IMMUNIZING FACILITIES" }}</span>
+                    <span class="quality_test__metric">{{ child.facility }} </span>
+                    <span class="quality_test__description">{{"FACILITIES IMMUNIZE" }}</span>
                 </a>
             </div>
 
