More Coldchain Fixes
capacity
facilities
fridgeController
workingstatus

--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -1,6 +1,6 @@
 <div ng-controller="FridgeController as vm">
 
-    <h4 class="text-left" >Immunizing Facilities</h4>
+    <h4 class="text-center" >Immunizing Facilities in {{child.fridgeDistrict }} District</h4>
     <br>
     <br>
 
