added a random map to coverage

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href='{% static "vendor/multiple-select/multiple-select.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/nvd3/build/nv.d3.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/angular-datatables/dist/css/angular-datatables.min.css"%}'>
+    <link rel="stylesheet" href='{% static "vendor/leaflet/dist/leaflet.css"%}' />
 </head>
 <body>
 
@@ -90,7 +91,8 @@
 <script type="text/javascript" src='{% static "app/components/fridge/fridgeController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/stock/stockController.js" %}'></script>
 <script type="text/javascript" src='{% static "app/components/surveillance/surveillanceController.js" %}'></script>
-
+<script type="text/javascript" src='{% static "vendor/leaflet/dist/leaflet.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/angular-leaflet-directive/dist/angular-leaflet-directive.js" %}'></script>
 
 {% block js %}
 {% endblock js %}
