New Capacity data upload

--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -1,6 +1,6 @@
 <div ng-controller="FridgeController as vm">
 
-    <h4 class="text-left" >Available Storage Capacity for {{ child.fridgeDistrict }} District</h4>
+    <h4 class="text-left" >Storage Capacity for {{ child.fridgeDistrict }} District</h4>
     <br>
     <br>
 
