added additional metrics for coverage

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -93,6 +93,8 @@
 <script type="text/javascript" src='{% static "app/components/surveillance/surveillanceController.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/leaflet/dist/leaflet.js" %}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-leaflet-directive/dist/angular-leaflet-directive.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/leaflet/dist/leaflet.shpfile.js" %}'></script>
+<script type="text/javascript" src='{% static "vendor/shp/dist/shp.js" %}'></script>
 
 {% block js %}
 {% endblock js %}
