Additional Fixes on Coldchain
api.py
capacity.html
facilities.html
app.css
fridgeController.js

--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -4,17 +4,17 @@
     <br>
     <br>
 
-    <div class="col-md-6">
-        <div class="page_graph">
+    <div class="col-md-6 text-left">
+        <div class="page_graph ">
             <nvd3 options="vm.optionsimmunizing" data="vm.graphimmunizing"></nvd3>
         </div>
     </div>
     <div class="col-md-6">
         <table ng-table="vm.tableParamsImmunizingAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
-            <tr ng-repeat="row in $data | orderBy:'immunizing_with_fridge / immunizing'">
+            <tr ng-repeat="row in $data">
                 <td title="'District'" sortable="'facility__district'" filter="{facility__district: 'text'}"  >{{row.facility__district}}</td>
                 <td title="'Immunizing'" sortable="'immunizing'"  class="text-center">{{row.immunizing}}</td>
-                <td title="'Coverage'" sortable="'immunizing_with_fridge / immunizing'" class="text-center" >{{ (row.immunizing_with_fridge/row.immunizing)*100 | number:0}}%</td>
+                <td title="'CCE Coverage'" sortable="'immunizing_with_fridge / immunizing'" class="text-center" >{{ (row.immunizing_with_fridge/row.immunizing)*100 | number:0}}%</td>
             </tr>
         </table>
 
