--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -2,7 +2,8 @@
 
     <h4 class="text-left" >Storage Capacity for {{ child.fridgeDistrict }} District</h4>
     <br>
-    <br>
+
+    <div class="row">
 
     <div class="col-md-7">
         <div class="page_graph">
@@ -42,33 +43,45 @@
 
     </div>
 
-    <div class="text-right">
-         <div class="test-area clearfix">
-
-         <h3 class="text-center">SITES WITH SUFFICIENT (*) CAPACITY</h3>
-            <div class="quality_test text-center" ui-sref-active="quality_test_active">
-                <a ui-sref-opts="{reload: true}">
-                    <span class="quality_test__metric">{{ child.utsurp }} </span>
-                    <span class="quality_test__description">{{"With Surplus Capacity" }}</span>
-                </a>
-            </div>
-
-            <div class="quality_test text-center" ui-sref-active="quality_test_active">
-                <a ui-sref-opts="{reload: true}">
-                    <span class="quality_test__metric">{{ child.utsufficient}}</span>
-                    <span class="quality_test__description">{{"With Sufficient Capacity" }}</span>
-                </a>
-            </div>
-            <div class="quality_test text-center" ui-sref-active="quality_test_active">
-                <a ui-sref-opts="{reload: true}">
-                    <span class="quality_test__metric">{{ child.utshortage}}</span>
-                    <span class="quality_test__description">{{"With a Shortage"}}</span>
-                </a>
-            </div>
-
-
-         </div>
-
     </div>
 
+    <div class="row">
+        <div class="col-md-12 text-left">
+            <div class=" text-left">
+                <div ui-view>
+                    <span class="filter-title h3 text-left">SITES WITH SUFFICIENT (*) CAPACITY</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="test-area clearfix ">
+
+                <div class="quality_test">
+                    <span class="quality_test__metric"> {{ child.utsurp }}% </span>
+                    <span class="quality_test__description">{{"With Surplus Capacity" | uppercase}}</span>
+                </div>
+
+                <div class="quality_test">
+                    <span class="quality_test__metric"> {{ child.utsufficient }}%</span>
+                    <span class="quality_test__description">{{"With Adequate Capacity" | uppercase}}</span>
+                </div>
+
+                <div class="quality_test">
+                    <span class="quality_test__metric"> {{ child.utshortage }}%</span>
+                    <span class="quality_test__description">{{"With a Shortage" | uppercase}}</span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <br>
+
 </div>
+
+
