--- a/dashboard/static/app/components/fridge/workingstatus.html
+++ b/dashboard/static/app/components/fridge/workingstatus.html
@@ -1,6 +1,6 @@
 <div ng-controller="FridgeController as vm">
 
-    <h4  class="text-left" >Working Status of Fridges in {{ child.fridgeDistrict }} District</h4>
+    <h4  class="text-left" >Working Status of Fridges & Freezers in {{ child.fridgeDistrict }} District</h4>
 
 
     <div class="col-md-4">
